--- a/Index.html
+++ b/Index.html
@@ -318,16 +318,19 @@
     <footer>
       <div>
         <a href="./index.html" lang="en"><span>Web</span> Studio</a>
-        <ul>
-          <li>
-            <address>г. Киев, Бульвар Леси Украинки, д. 26</address>
-          </li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+380991111111</a></li>
-        </ul>
-      </div>
-      <div>
-        <p>ПРИСОЕДИНЯЙТЕСЬ</p>
+        <address>
+            </div>
+            <ul>
+                <li>
+                    <a href="https://goo.gl/maps/y4V5g4TZUduQF8Uq7">г. Киев, Бульвар Леси Украинки, д. 26</a>
+                </li>
+                <li><a href="mailto:info@example.com">info@example.com</a></li>
+                <li><a href="tel:+380991111111">+380991111111</a></li>
+            </ul>
+            <div>
+        </address>
+      
+        <b>ПРИСОЕДИНЯЙТЕСЬ</b>
         <ul>
           <li>
             <a href=""
