--- a/Portfolio.html
+++ b/Portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
 
@@ -16,7 +17,7 @@
             <a href="">Студия</a>
           </li>
           <li>
-            <a href="">Портфолио</a>
+            <a href="./Portfolio.html">Портфолио</a>
           </li>
           <li>
             <a href="">Контакты</a>
@@ -32,6 +33,22 @@
         </li>
       </ul>
     </header>
+
+    <main>
+
+        <!--Портфолио-->
+        <!--Кнопки фильтра-->
+        <ul>
+            <li><button type="button">Все</button></li>
+            <li><button type="button">Веб-сайты</button></li>
+            <li><button type="button">Приложения</button></li>
+            <li><button type="button">Дизайн</button></li>
+            <li><button type="button">Маркетинг</button></li>
+        </ul>
+
+    </main>
+
+
   </body>
 
 <!--Футер-->
