--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
             <a href="">Студия</a>
           </li>
           <li>
-            <a href="">Портфолио</a>
+            <a href="./Portfolio.html">Портфолио</a>
           </li>
           <li>
             <a href="">Контакты</a>
