--- a/Portfolio.html
+++ b/Portfolio.html
@@ -46,6 +46,76 @@
             <li><button type="button">Маркетинг</button></li>
         </ul>
 
+        <ul>
+            <li>
+                <a href="">
+                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов</p>
+                    <h2>Технокряк</h2>
+                    <p>Веб-сайт</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="" alt="">
+                    <h2></h2>
+                    <p></p>
+                </a>
+
+            </li>
+            <li>
+                <a href="">
+                    <img src="" alt="">
+                    <h2></h2>
+                    <p></p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="" alt="">
+                    <h2></h2>
+                    <p></p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="" alt="">
+                    <h2></h2>
+                    <p></p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="" alt="">
+                    <h2></h2>
+                    <p></p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="" alt="">
+                    <h2></h2>
+                    <p></p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="" alt="">
+                    <h2></h2>
+                    <p></p>
+                </a>
+            </li>
+            <li>
+
+                <a href="">
+                    <img src="" alt="">
+                    <h2></h2>
+                    <p></p>
+                </a>
+            </li>
+        </ul>
+
+
     </main>
 
 
