--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
     <header>
       <!--Шапка сайта-->
       <nav>
-        <a href="./index.html"><span>Web</span> Studio</a>
+        <a href="./index.html" class="logo"><span class="logo-1">Web</span> Studio</a>
         <ul>
           <li>
             <a href="">Студия</a>
