--- a/Index.html
+++ b/Index.html
@@ -12,24 +12,24 @@
       <!--Шапка сайта-->
       <nav>
         <a href="./index.html" class="logo"><span class="logo-1">Web</span> Studio</a>
-        <ul>
+        <ul class="site-nav list">
           <li>
-            <a href="">Студия</a>
+            <a href="" class="link">Студия</a>
           </li>
           <li>
-            <a href="./Portfolio.html">Портфолио</a>
+            <a href="./Portfolio.html" class="link">Портфолио</a>
           </li>
           <li>
-            <a href="">Контакты</a>
+            <a href="" class="link">Контакты</a>
           </li>
         </ul>
       </nav>
-      <ul>
+      <ul class="auth list">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
