--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
     <header>
       <!--Шапка сайта-->
       <nav>
-        <a href="./index.html" class="logo"><span class="logo-1">Web</span> Studio</a>
+        <a href="./index.html" class="logo link"><span class="logo-second link">Web</span> Studio</a>
         <ul class="site-nav list">
           <li>
             <a href="" class="link">Студия</a>
@@ -24,7 +24,7 @@
           </li>
         </ul>
       </nav>
-      <ul class="auth list">
+      <ul class="auth-nav list">
         <li>
           <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
         </li>
