--- a/Index.html
+++ b/Index.html
@@ -36,9 +36,9 @@
 
     <main>
       <!--Герой-->
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button>Заказать услугу</button>
+      <section class="hero">
+        <h1 class="hero-item">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="modal-btn">Заказать услугу</button>
       </section>
 
       <!--Преимущества-->
