--- a/Index.html
+++ b/Index.html
@@ -47,28 +47,28 @@
         <ul class="advantages-list">
           <li>
             <h3 class="title">Внимание к деталям</h3>
-            <p>
+            <p class="decoration">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
             <h3 class="title">Пунктуальность</h3>
-            <p>
+            <p class="decoration">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
             <h3 class="title">Планирование</h3>
-            <p>
+            <p class="decoration">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
             <h3 class="title">Современные технологии</h3>
-            <p>
+            <p class="decoration">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
