--- a/Index.html
+++ b/Index.html
@@ -44,7 +44,7 @@
       <!--Преимущества-->
       <section class="section">
         <h2 hidden class="section-title">Преимущества</h2>
-        <ul class="advantages-list">
+        <ul class="advantages-list list">
           <li>
             <h3 class="title">Внимание к деталям</h3>
             <p class="decoration">
@@ -79,7 +79,7 @@
       <!--Чем мы занимаемся-->
       <section class="section">
         <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul>
+        <ul class="working-list list">
           <li>
             <img
               src="./images/Technology/box1.jpg"
@@ -87,7 +87,7 @@
               height="294"
               width="370"
             />
-            <h3>Десктопные приложения</h3>
+            <h3 class="working-list-item">Десктопные приложения</h3>
           </li>
           <li>
             <img
@@ -96,7 +96,7 @@
               height="294"
               width="370"
             />
-            <h3>Мобильные приложения</h3>
+            <h3 class="working-list-item">Мобильные приложения</h3>
           </li>
           <li>
             <img
@@ -105,15 +105,15 @@
               height="294"
               width="370"
             />
-            <h3>Дизайнерские решения</h3>
+            <h3 class="working-list-item">Дизайнерские решения</h3>
           </li>
         </ul>
       </section>
 
       <!--Наша команда-->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="team-title list">
           <li>
             <img
               src="./images/Team/team1.jpg"
@@ -121,9 +121,9 @@
               width="270"
               height="260"
             />
-            <h3>Николай Кучеренко</h3>
-            <p lang="en">Product Designer</p>
-            <ul>
+            <h3 class="title">Николай Кучеренко</h3>
+            <p lang="en" class="team-title-position">Product Designer</p>
+            <ul class="social-list list">
               <li>
                 <a href=""
                   ><img
@@ -161,9 +161,9 @@
               width="270"
               height="260"
             />
-            <h3>Ольга Иванова</h3>
-            <p lang="en">Frontend Developer</p>
-            <ul>
+            <h3 class="title">Ольга Иванова</h3>
+            <p lang="en" class="team-title-position">Frontend Developer</p>
+            <ul class="social-list list">
               <li>
                 <a href=""
                   ><img
@@ -201,9 +201,9 @@
               width="270"
               height="260"
             />
-            <h3>Андрей Шевченко</h3>
-            <p lang="en">Marketing</p>
-            <ul>
+            <h3 class="title">Андрей Шевченко</h3>
+            <p lang="en" class="team-title-position">Marketing</p>
+            <ul class="social-list list">
               <li>
                 <a href=""
                   ><img
@@ -241,9 +241,9 @@
               width="270"
               height="260"
             />
-            <h3>Иван Николаев</h3>
-            <p lang="en">UI Designer</p>
-            <ul>
+            <h3 class="title">Иван Николаев</h3>
+            <p lang="en" class="team-title-position">UI Designer</p>
+            <ul class="social-list list">
               <li>
                 <a href=""
                   ><img
