Секция наши клиенты

--- a/Index.html
+++ b/Index.html
@@ -278,9 +278,9 @@
       </section>
 
       <!--Постоянные клиенты-->
-      <section>
-        <h2>Постоянные клиенты</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">Постоянные клиенты</h2>
+        <ul class="client-list list">
           <li>
             <a href=""
               ><img src="./images/Сustomers/logo1.svg" alt="Логотип компании"
