--- a/Index.html
+++ b/Index.html
@@ -318,7 +318,7 @@
     <!--Футер-->
     <footer>
       <div>
-        <a href="./index.html" lang="en"><span>Web</span> Studio</a>
+        <a href="./index.html" lang="en" class="icon"></a><span class="icon-second">Web</span>Studio</a>
         <address>
             </div>
             <ul>
