--- a/Index.html
+++ b/Index.html
@@ -316,23 +316,23 @@
     </main>
 
     <!--Футер-->
-    <footer>
+    <footer class="footer-section">
       <div>
-        <a href="./index.html" lang="en" class="icon"></a><span class="icon-second">Web</span>Studio</a>
+        <a href="./index.html" lang="en" class="logo link"><span class="footer">Web</span>Studio</a>
         <address>
             </div>
-            <ul>
+            <ul class="adress-list list">
                 <li>
-                    <a href="https://goo.gl/maps/y4V5g4TZUduQF8Uq7">г. Киев, Бульвар Леси Украинки, д. 26</a>
+                    <a href="https://goo.gl/maps/y4V5g4TZUduQF8Uq7" class="adress-list-item-direction link">г. Киев, Бульвар Леси Украинки, д. 26</a>
                 </li>
-                <li><a href="mailto:info@example.com">info@example.com</a></li>
-                <li><a href="tel:+380991111111">+380991111111</a></li>
+                <li><a href="mailto:info@example.com" class="adress-list-item link">info@example.com</a></li>
+                <li><a href="tel:+380991111111" class="adress-list-item link">+380991111111</a></li>
             </ul>
             <div>
         </address>
       
-        <b>ПРИСОЕДИНЯЙТЕСЬ</b>
-        <ul>
+        <b class="title">ПРИСОЕДИНЯЙТЕСЬ</b>
+        <ul class="title-list list">
           <li>
             <a href=""
               ><img src="./images/Social/instagram.svg" alt="Логотип Инстаграм"
