--- a/Portfolio.html
+++ b/Portfolio.html
@@ -48,10 +48,9 @@
 
         <ul>
             <li>
-                <a href="">
-                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
-                    шпионажа и атак на защищённые сервера конкурентов</p>
-                    <h2>Технокряк</h2>
+                <a href=""><img src="" alt=""></a>
+                    
+                    <h2>Технопарк</h2>
                     <p>Веб-сайт</p>
                 </a>
             </li>
