--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
         <a href="./index.html" class="logo link"><span class="logo-second link">Web</span> Studio</a>
         <ul class="site-nav list">
           <li>
-            <a href="" class="link">Студия</a>
+            <a href="" class="current link">Студия</a>
           </li>
           <li>
             <a href="./Portfolio.html" class="link">Портфолио</a>
