Добавил файл normalize.css

--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/Style.css">
   </head>
 
@@ -111,7 +112,7 @@
       </section>
 
       <!--Наша команда-->
-      <section class="section">
+      <section class="section-fon">
         <h2 class="section-title">Наша команда</h2>
         <ul class="team-title list">
           <li>
