--- a/Index.html
+++ b/Index.html
@@ -14,25 +14,25 @@
     <header>
       <!--Шапка сайта-->
       <nav>
-        <a href="./index.html" class="logo link"><span class="logo-second link">Web</span> Studio</a>
+        <a href="./index.html" class="logo link"><span class="header link">Web</span> Studio</a>
         <ul class="site-nav list">
           <li>
-            <a href="" class="current link">Студия</a>
+            <a href="" class="site-nav-list current link">Студия</a>
           </li>
           <li>
-            <a href="./Portfolio.html" class="link">Портфолио</a>
+            <a href="./Portfolio.html" class="site-nav-list link">Портфолио</a>
           </li>
           <li>
-            <a href="" class="link">Контакты</a>
+            <a href="" class="site-nav-list link">Контакты</a>
           </li>
         </ul>
       </nav>
       <ul class="auth-nav list">
         <li>
-          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="auth-nav-list link">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="auth-nav-list link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
