--- a/Index.html
+++ b/Index.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet">
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/Style.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/Style.css" />
   </head>
 
   <body>
     <header>
       <!--Шапка сайта-->
       <nav>
-        <a href="./index.html" class="logo link"><span class="header link">Web</span> Studio</a>
+        <a href="./index.html" class="logo link"
+          ><span class="header link">Web</span> Studio</a
+        >
         <ul class="site-nav list">
           <li>
             <a href="" class="site-nav-list current link">Студия</a>
@@ -29,10 +33,14 @@
       </nav>
       <ul class="auth-nav list">
         <li>
-          <a href="mailto:info@devstudio.com" class="auth-nav-list link">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="auth-nav-list link"
+            >info@devstudio.com</a
+          >
         </li>
         <li>
-          <a href="tel:+380961111111" class="auth-nav-list link">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="auth-nav-list link"
+            >+38 096 111 11 11</a
+          >
         </li>
       </ul>
     </header>
@@ -124,7 +132,7 @@
               width="270"
               height="260"
             />
-            <h3 class="title">Николай Кучеренко</h3>
+            <h3 class="title-name">Николай Кучеренко</h3>
             <p lang="en" class="team-title-position">Product Designer</p>
             <ul class="social-list list">
               <li>
@@ -164,7 +172,7 @@
               width="270"
               height="260"
             />
-            <h3 class="title">Ольга Иванова</h3>
+            <h3 class="title-name">Ольга Иванова</h3>
             <p lang="en" class="team-title-position">Frontend Developer</p>
             <ul class="social-list list">
               <li>
@@ -204,7 +212,7 @@
               width="270"
               height="260"
             />
-            <h3 class="title">Андрей Шевченко</h3>
+            <h3 class="title-name">Андрей Шевченко</h3>
             <p lang="en" class="team-title-position">Marketing</p>
             <ul class="social-list list">
               <li>
@@ -244,7 +252,7 @@
               width="270"
               height="260"
             />
-            <h3 class="title">Иван Николаев</h3>
+            <h3 class="title-name">Иван Николаев</h3>
             <p lang="en" class="team-title-position">UI Designer</p>
             <ul class="social-list list">
               <li>
@@ -320,21 +328,25 @@
 
     <!--Футер-->
     <footer class="footer-section">
+      <a href="./index.html" lang="en" class="logo link"
+        ><span class="footer">Web</span>Studio</a
+      >
+      <address class="address-list">
+        <div>
+          <a href="https://goo.gl/maps/y4V5g4TZUduQF8Uq7" class="map link"
+            >г. Киев, Бульвар Леси Украинки, д. 26</a
+          >
+          <br />
+          <a href="mailto:info@example.com" class="mail link"
+            >info@example.com</a
+          >
+          <br />
+          <a href="tel:+380991111111" class="phone link">+38099111 11 11</a>
+        </div>
+      </address>
+
+      <b class="title">ПРИСОЕДИНЯЙТЕСЬ</b>
       <div>
-        <a href="./index.html" lang="en" class="logo link"><span class="footer">Web</span>Studio</a>
-        <address>
-            </div>
-            <ul class="adress-list list">
-                <li>
-                    <a href="https://goo.gl/maps/y4V5g4TZUduQF8Uq7" class="adress-list-item-direction link">г. Киев, Бульвар Леси Украинки, д. 26</a>
-                </li>
-                <li><a href="mailto:info@example.com" class="adress-list-item link">info@example.com</a></li>
-                <li><a href="tel:+380991111111" class="adress-list-item link">+380991111111</a></li>
-            </ul>
-            <div>
-        </address>
-      
-        <b class="title">ПРИСОЕДИНЯЙТЕСЬ</b>
         <ul class="title-list list">
           <li>
             <a href=""
