--- a/Portfolio.html
+++ b/Portfolio.html
@@ -124,36 +124,43 @@
   </body>
 
 <!--Футер-->
-  <footer>
+<footer class="footer-section">
+    <a href="./index.html" lang="en" class="logo link"><span class="footer">Web</span>Studio</a>
+    <address class="address">
         <div>
-            <a href="./index.html" lang="en"><span>Web</span> Studio</a>
-            <address>
-        </div>
-        <ul>
-            <li>
-                <a href="https://goo.gl/maps/y4V5g4TZUduQF8Uq7">г. Киев, Бульвар Леси Украинки, д. 26</a>
-            </li>
-            <li><a href="mailto:info@example.com">info@example.com</a></li>
-            <li><a href="tel:+380991111111">+380991111111</a></li>
-        </ul>
-        <div>
-            </address>
-        
-            <b>ПРИСОЕДИНЯЙТЕСЬ</b>
-            <ul>
+            <ul class="address-list list">
                 <li>
-                    <a href=""><img src="./images/Social/instagram.svg" alt="Логотип Инстаграм" /></a>
+                    <a class="map link" href="https://goo.gl/maps/y4V5g4TZUduQF8Uq7">г. Киев, Бульвар Леси Украинки, д.
+                        26</a>
                 </li>
                 <li>
-                    <a href=""><img src="./images/Social/twitter.svg" alt="Логотип Твиттер" /></a>
+                    <a class="mail link" href="mailto:info@devstudio.com" lang="en">info@example.com</a>
                 </li>
                 <li>
-                    <a href=""><img src="./images/Social/facebook.svg" alt="Логотип Фейсбук" /></a>
-                </li>
-                <li>
-                    <a href=""><img src="./images/Social/linkedin.svg" alt="Логотип Линкедин" /></a>
+                    <a class="phone link" href="tel:+380961111111">+38 099 111 11 11</a>
                 </li>
             </ul>
         </div>
-  </footer>
+    </address>
+
+    <b class="title">ПРИСОЕДИНЯЙТЕСЬ</b>
+    <div>
+        <ul class="title-list list">
+            <li>
+                <a href=""><img src="./images/Social/instagram.svg" alt="Логотип Инстаграм" /></a>
+            </li>
+            <li>
+                <a href=""><img src="./images/Social/twitter.svg" alt="Логотип Твиттер" /></a>
+            </li>
+            <li>
+                <a href=""><img src="./images/Social/facebook.svg" alt="Логотип Фейсбук" /></a>
+            </li>
+            <li>
+                <a href=""><img src="./images/Social/linkedin.svg" alt="Логотип Линкедин" /></a>
+            </li>
+        </ul>
+    </div>
+</footer>
+</body>
+
 </html>
