--- a/Index.html
+++ b/Index.html
@@ -48,7 +48,10 @@
     <main>
       <!--Герой-->
       <section class="hero">
-        <h1 class="hero-item">Эффективные решения для вашего бизнеса</h1>
+        <h1 class="hero-item">
+          Эффективные решения <br />
+          для вашего бизнеса
+        </h1>
         <button type="button" class="modal-btn">Заказать услугу</button>
       </section>
 
@@ -331,17 +334,25 @@
       <a href="./index.html" lang="en" class="logo link"
         ><span class="footer">Web</span>Studio</a
       >
-      <address class="address-list">
+      <address class="address">
         <div>
-          <a href="https://goo.gl/maps/y4V5g4TZUduQF8Uq7" class="map link"
-            >г. Киев, Бульвар Леси Украинки, д. 26</a
-          >
-          <br />
-          <a href="mailto:info@example.com" class="mail link"
-            >info@example.com</a
-          >
-          <br />
-          <a href="tel:+380991111111" class="phone link">+38099111 11 11</a>
+          <ul class="address-list list">
+            <li>
+              <a class="map link" href="https://goo.gl/maps/y4V5g4TZUduQF8Uq7"
+                >г. Киев, Бульвар Леси Украинки, д. 26</a
+              >
+            </li>
+            <li>
+              <a class="mail link" href="mailto:info@devstudio.com" lang="en"
+                >info@example.com</a
+              >
+            </li>
+            <li>
+              <a class="phone link" href="tel:+380961111111"
+                >+38 099 111 11 11</a
+              >
+            </li>
+          </ul>
         </div>
       </address>
 
