--- a/Portfolio.html
+++ b/Portfolio.html
@@ -12,29 +12,28 @@
   <body>
 
     <!--Шапка сайта-->
-    <header>
-      <nav>
-        <a href="./index.html"><span>Web</span> Studio</a>
-        <ul>
-          <li>
-            <a href="">Студия</a>
-          </li>
-          <li>
-            <a href="./Portfolio.html">Портфолио</a>
-          </li>
-          <li>
-            <a href="">Контакты</a>
-          </li>
+    <nav>
+        <a href="./index.html" class="logo link"><span class="header link">Web</span> Studio</a>
+        <ul class="site-nav list">
+            <li>
+                <a href="./Index.html" class="site-nav-list link">Студия</a>
+            </li>
+            <li>
+                <a href="./Portfolio.html" class="site-nav-list current link">Портфолио</a>
+            </li>
+            <li>
+                <a href="" class="site-nav-list link">Контакты</a>
+            </li>
         </ul>
-      </nav>
-      <ul>
+    </nav>
+    <ul class="auth-nav list">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="auth-nav-list link">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="auth-nav-list link">+38 096 111 11 11</a>
         </li>
-      </ul>
+    </ul>
     </header>
 
     <main>
