--- a/Index.html
+++ b/Index.html
@@ -361,22 +361,24 @@
         <ul class="title-list list">
           <li>
             <a href=""
-              ><img src="./images/Social/instagram.svg" alt="Логотип Инстаграм"
+              ><img
+                src="./images/Social/instagram.svg"
+                alt="Логотип Инстаграма"
             /></a>
           </li>
           <li>
             <a href=""
-              ><img src="./images/Social/twitter.svg" alt="Логотип Твиттер"
+              ><img src="./images/Social/twitter.svg" alt="Логотип Твиттера"
             /></a>
           </li>
           <li>
             <a href=""
-              ><img src="./images/Social/facebook.svg" alt="Логотип Фейсбук"
+              ><img src="./images/Social/facebook.svg" alt="Логотип Фейсбука"
             /></a>
           </li>
           <li>
             <a href=""
-              ><img src="./images/Social/linkedin.svg" alt="Логотип Линкедин"
+              ><img src="./images/Social/linkedin.svg" alt="Логотип Линкедина"
             /></a>
           </li>
         </ul>
