Изменение имен файлов

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -21,10 +21,10 @@
         >
         <ul class="site-nav list">
           <li>
-            <a href="./Index.html" class="site-nav-list link">Студия</a>
+            <a href="./index.html" class="site-nav-list link">Студия</a>
           </li>
           <li>
-            <a href="./Portfolio.html" class="site-nav-list current link"
+            <a href="./portfolio.html" class="site-nav-list current link"
               >Портфолио</a
             >
           </li>
