--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,7 @@
             <a href="" class="site-nav-list current link">Студия</a>
           </li>
           <li>
-            <a href="./Portfolio.html" class="site-nav-list link">Портфолио</a>
+            <a href="./portfolio.html" class="site-nav-list link">Портфолио</a>
           </li>
           <li>
             <a href="" class="site-nav-list link">Контакты</a>
